--- a/composer/userconf.yaml
+++ b/composer/userconf.yaml
@@ -3,9 +3,36 @@ jobs:
 
   - job_name: A
     version: 1
-    flink_address: http://10.188.166.98:9091
-    mqtt_address: tcp://10.188.166.98:1883
+    flink_address: http://172.16.96.44:8081
+    mqtt_address: tcp://172.16.96.44:1883
     source_topic: T-1
     sink_topic: T-2
+    entry_class: flinkpackage.FlowCheck
+    jar_path: /usr/src/app/jars/flinktest-1.jar
+
+  - job_name: B
+    version: 1
+    flink_address: http://172.16.96.44:8081
+    mqtt_address: tcp://172.16.96.44:1883
+    source_topic: T-2
+    sink_topic: T-3
+    entry_class: flinkpackage.FlowCheck
+    jar_path: /usr/src/app/jars/flinktest-1.jar
+
+  - job_name: C
+    version: 1
+    flink_address: http://172.16.96.44:8081
+    mqtt_address: tcp://172.16.96.44:1883
+    source_topic: T-3
+    sink_topic: T-4
+    entry_class: flinkpackage.FlowCheck
+    jar_path: /usr/src/app/jars/flinktest-1.jar
+
+  - job_name: D
+    version: 1
+    flink_address: http://172.16.96.44:8081
+    mqtt_address: tcp://172.16.96.44:1883
+    source_topic: T-4
+    sink_topic: T-N
     entry_class: flinkpackage.FlowCheck
     jar_path: /usr/src/app/jars/flinktest-1.jar
