added graph visualizer

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Flask==1.1.2
 flask-restful==0.3.8
 markdown==3.2.1
 requests==2.23.0
+
+pandas==1.0.3
+numpy==1.18.4
+networkx==2.4
+matplotlib==3.2.1
